<resources>
    <string name="app_name">Music Player</string>
    <string name="button_search">SEARCH</string>
    <string name="button_search_no_songs">no songs found</string>
    <string name="button_search_description">Search</string>
    <string name="controller_current_time">00:00</string>
    <string name="controller_total_time">00:00</string>
    <string name="button_stop_description">Stop the music</string>
    <string name="button_stop_text">STOP</string>
    <string name="button_playPause_description">Play or pause the music</string>
    <string name="button_playPause_text">PLAY/PAUSE</string>
    <string name="menu_main_addPlaylist_title">Add Playlist</string>
    <string name="menu_main_loadPlaylist_title">Load Playlist</string>
    <string name="menu_main_deletePlaylist_title">Delete Playlist</string>
    <string name="btn_listItemSong_playPause">Play/Pause</string>
    <string name="addPlaylist_Btn_ok">Ok</string>
    <string name="addPlaylist_btn_ok_description">Ok</string>
    <string name="addPlaylist_btn_cancel">Cancel</string>
    <string name="addPlaylist_btn_cancelDescription">Cancel</string>
    <string name="addPlaylist_et_playlistNameHint">Playlist Name</string>
</resources>