<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainAddPlaylistFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:focusable="true">

    <EditText
        android:id="@+id/addPlaylistEtPlaylistName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/addPlaylist_et_playlistNameHint"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/addPlaylistBtnOk"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/addPlaylist_btn_ok_description"
        android:text="@string/addPlaylist_Btn_ok" />

    <Button
        android:id="@+id/addPlaylistBtnCancel"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/addPlaylist_btn_cancelDescription"
        android:text="@string/addPlaylist_btn_cancel"
        android:typeface="normal" />
</FrameLayout>